Fix: Fixed off center of checkboxes and added different color to labels

--- a/app/domain-story.css
+++ b/app/domain-story.css
@@ -52,6 +52,7 @@ input {
 
 .label-padding {
   margin: 5% 0 0 0;
+  color: #638d8b;
 }
 
 .btn-container-parent {
